test/spec_vectors/simd_i16x8_cmp/fail/module_30.wat
(module (func $i16x8.ge_u-1st-arg-empty (result v128) (i16x8.ge_u (v128.const i16x8 0 0 0 0 0 0 0 0))))